2006-02-15  Ankit Jain  <jankit@novell.com>

	* metadata.c (mono_metadata_decode_signed_value): New function to decode
	signed values, used only for representing lower bounds of arrays.
	(mono_metadata_parse_array_full): Use new
	mono_metadata_decode_signed_value to decode lower bounds.

2006-02-14  Martin Baulig  <martin@ximian.com>

	* reflection.c
	(mono_reflection_get_token): Support "MonoGenericMethod" and
	"MonoGenericCMethod" and allow generic instances / methods.

2006-02-11  Zoltan Varga  <vargaz@gmail.com>

	* console-io.c (ves_icall_System_ConsoleDriver_GetTtySize): New icall
	to obtain the terminal size using an ioctl.

	* object.c (mono_nullable_init): Revert this as nullable reference
	types are not valid.
	(mono_nullable_box): Ditto.

2006-02-09  Dick Porter  <dick@ximian.com>

	* threads.c (mono_thread_detach): Drop a reference to the thread
	we're detaching.

2006-02-09  Zoltan Varga  <vargaz@gmail.com>

	* object.c (mono_nullable_init): Handle nullable reference types.
	(mono_nullable_box): Ditto. Fixes #77446.

2006-02-07  Martin Baulig  <martin@ximian.com>

	* icall.c (ves_icall_MonoMethod_get_IsGenericMethodDefinition): Removed.

2006-02-07  Ankit Jain  <jankit@novell.com>

	* socket-io.h (MonoSocketFlags): New. Copy of System.Net.Sockets.SocketFlags
	* socket-io.c (convert_socketflags): New. Convert SocketFlags to native ones.
	(ves_icall_System_Net_Sockets_Socket_Receive_internal): Convert flags using convert_socketflags.
	(ves_icall_System_Net_Sockets_Socket_ReceiveFrom_internal): Likewise.
	(ves_icall_System_Net_Sockets_Socket_Send_internal): Likewise.
	(ves_icall_System_Net_Sockets_Socket_SendTo_internal): Likewise.

2006-02-02  Zoltan Varga  <vargaz@gmail.com>

	* class.c (mono_class_create_generic): Set type_token as well.

	* object.c (mono_runtime_invoke_array): Fix handling of byref vtypes to be
	compatible with MS.

2006-02-02  Martin Baulig  <martin@ximian.com>

	* threads.c, gc.c: Removed the `WITH_INCLUDED_LIBGC' section; it